<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    cardview:cardCornerRadius="4dp">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:id="@+id/card_picture"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionName_picture">
        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"

            android:background="@color/cardBackgroundTransparency">

            <TextView
                android:id="@+id/card_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/card_username"
                android:textSize="@dimen/card_username_texSize">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_text_below_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/test_text"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:id="@+id/card_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/test_text"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margintop">

                <CheckBox
                    android:id="@+id/like_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector">
                </CheckBox>
                <TextView
                    android:id="@+id/like_number_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="0 Likes"
                    android:textSize="15sp"
                    android:layout_marginLeft="5dp">
                </TextView>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>